# biometrics-hack

./: .env.example  .gitignore  README.md  meta_res.csv  pyproject.toml
app/: dataset.py  hack.py  metric.py  threshold.py  train.py
app/arc2face/: core.py  download.py
app/face_reconstruction/: __init__.py  core.py
app/model_train/: dataset.py  models.py
app/realistic_face/: __init__.py  distance.py  face_reconstruction.py  facenet_model.py  stylegan_model.py  train.py
embeddings_antilopa/test/: 000d8b15-6885-4b21-9e57-b28d1532145a.npy  0044cb9f-9d35-4994-ba84-2ff882e26e3d.npy  004e7bd3-8286-4c83-ba70-d53f367cb95d.npy  0078dd75-b096-4991-b34e-6ca5f5600276.npy  00c0bfd5-bf46-4234-9cbf-41f6309d98b3.npy  00d74def-0f89-4420-bdb3-c7fa8f67723e.npy  010f7a85-b989-4cbf-8f89-283fcaf24fcc.npy  01146a5f-180a-4f2e-a737-58b23bc61c12.npy  01315a36-86d6-4b21-9d86-e8e3ff4c7539.npy  01436e6c-b95d-44cd-af18-37fe629fbbb6.npy  0153049f-fb50-4656-85fa-2905fbea28a8.npy  016cd038-5c79-473e-bd48-3bb071c68e93.npy  0178b5a1-cd39-4c0b-af23-77b5f042d4ae.npy  018b5536-ca5b-4bea-bd69-17c10dec4dbf.npy  01a26b8f-1d65-49ea-97bf-cfcc9277c872.npy  01b7d081-b43e-44b7-a506-92024f980d3a.npy  01e32b46-1ea7-4b15-865f-1f3ceab7b073.npy  0215ad71-f104-4fd9-b5bd-850277fe856a.npy  023f82c6-b256-4b05-98e5-0a6c7b98e305.npy  028706da-b281-411f-9323-b3531b532838.npy  028c9a59-6ffb-4106-ad54-541e98c5a421.npy  02ba0631-3b82-43b7-af5d-11f942271c10.npy  0306752e-b6cf-4223-880c-75958fcd9a01.npy  032eea20-4874-4827-8753-9f081399a570.npy  03401892-59e9-4611-bbbb-7ad2ed503717.npy  039d316a-12d8-4bdf-9747-ff8b3e5b77b4.npy  03a6fa44-b61a-464b-9296-63f0a80a2487.npy  03d75148-a08a-4b09-9e9c-50ac63d46646.npy  03f0a989-185e-4e29-812f-53328a88bf65.npy  (+2002 more)
notebooks/: arc2face.ipynb  face_reconstruction.ipynb  generate_vector.ipynb
tests/: test_face_reconstruction.py
(+6275 files in other folders)
