[tool.poetry]
name = "biometrics-hack"
version = "0.1.0"
description = ""
authors = ["Maxim Kirilyuk <werserk@inbox.ru>, Artem Vlasov <temamed@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
insightface = "^0.7.3"
torch = "^2.4.1"
transformers = "4.34"
diffusers = "0.23.0"
onnxruntime = "^1.19.2"
gdown = "^5.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.8.0"}
tqdm = "^4.66.5"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120