[tool.poetry]
name = "biometrics-hack"
version = "0.1.0"
description = ""
authors = ["team 4U"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
insightface = "^0.7.3"
transformers = "4.34"
diffusers = "0.23.0"
onnxruntime = "^1.19.2"
gdown = "^5.2.0"
python-dotenv = "^1.0.1"
facenet-pytorch = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.8.0"}
tqdm = "^4.66.5"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120